--- a/Escola/nbproject/project.properties
+++ b/Escola/nbproject/project.properties
@@ -29,13 +29,14 @@ dist.jar=${dist.dir}/Escola.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.1.jar=..\\json-simple-1.1.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
